--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-    "homepage": "https://aishwaryaparab.github.io/book-landing-page/",
+    "homepage": "https://ayushdce2.github.io/login2/",
   "type": "module",
   "scripts": {
     "dev": "vite",
