--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-    "homepage": "https://ayushdce2.github.io/login2/",
+  "homepage": "https://ayushdce2.github.io/login2/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-      "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
